samples/_failures_safe/1761375173_59dbfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20259556.c: In function ‘main’:
./samples/SAFE/__tmp_20259556.c:161:9: error: expected expression at end of input
  161 |         for (int i =
      |         ^~~
./samples/SAFE/__tmp_20259556.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20259556.c:161:9: error: expected declaration or statement at end of input
